--- a/resources/wordpress/.htaccess
+++ b/resources/wordpress/.htaccess
@@ -1,109 +1,195 @@
+# START – TN Disable server signature #
+ServerSignature Off
+# END – TN Disable server signature #
+
+FileETag None
+AddDefaultCharset utf-8
+
 
 # BEGIN WordPress
 # Las directivas (líneas) entre `BEGIN WordPress` y `END WordPress` se generan dinámicamente
 # , y solo se deberían modificar mediante filtros de WordPress.
 # Cualquier cambio en las directivas que hay entre esos marcadores se sobreescribirán.
 <IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
-</IfModule>
+    <IfModule mod_negotiation.c>
+        Options -MultiViews
+    </IfModule>
 
+    RewriteEngine On
+    RewriteBase /
+    RewriteRule ^index\.php$ - [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule . /index.php [L]
+</IfModule>
 # END WordPress
+
+
+<Files ~ "^\.ht">
+Order allow,deny
+Deny from all
+Satisfy All
+</Files>
 
 
 # BEGIN DEFLATE COMPRESSION
 <IfModule mod_deflate.c>
-# Compress HTML, CSS, JavaScript, Text, XML and fonts
- AddOutputFilterByType DEFLATE application/javascript
- AddOutputFilterByType DEFLATE application/rss+xml
- AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
- AddOutputFilterByType DEFLATE application/x-font
- AddOutputFilterByType DEFLATE application/x-font-opentype
- AddOutputFilterByType DEFLATE application/x-font-otf
- AddOutputFilterByType DEFLATE application/x-font-truetype
- AddOutputFilterByType DEFLATE application/x-font-ttf
- AddOutputFilterByType DEFLATE application/x-javascript
- AddOutputFilterByType DEFLATE application/xhtml+xml
- AddOutputFilterByType DEFLATE application/xml
- AddOutputFilterByType DEFLATE font/opentype
- AddOutputFilterByType DEFLATE font/otf
- AddOutputFilterByType DEFLATE font/ttf
- AddOutputFilterByType DEFLATE image/svg+xml
- AddOutputFilterByType DEFLATE image/x-icon
- AddOutputFilterByType DEFLATE text/css
- AddOutputFilterByType DEFLATE text/html
- AddOutputFilterByType DEFLATE text/javascript
- AddOutputFilterByType DEFLATE text/plain
- AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE "application/atom+xml" \
+                        "application/javascript" \
+                        "application/json" \
+                        "application/ld+json" \
+                        "application/manifest+json" \
+                        "application/rdf+xml" \
+                        "application/rss+xml" \
+                        "application/schema+json" \
+                        "application/vnd.geo+json" \
+                        "application/vnd.ms-fontobject" \
+                        "application/x-font" \
+                        "application/x-font-opentype" \
+                        "application/x-font-otf" \
+                        "application/x-font-truetype" \
+                        "application/x-font-ttf" \
+                        "application/x-javascript" \
+                        "application/x-web-app-manifest+json" \
+                        "application/xhtml+xml" \
+                        "application/xml" \
+                        "font/eot" \
+                        "font/otf" \
+                        "font/ttf" \
+                        "font/opentype" \
+                        "image/bmp" \
+                        "image/svg+xml" \
+                        "image/vnd.microsoft.icon" \
+                        "image/x-icon" \
+                        "text/cache-manifest" \
+                        "text/css" \
+                        "text/html" \
+                        "text/javascript" \
+                        "text/plain" \
+                        "text/vcard" \
+                        "text/vnd.rim.location.xloc" \
+                        "text/vtt" \
+                        "text/x-component" \
+                        "text/x-cross-domain-policy" \
+                        "text/xml"
 </IfModule>
 # END DEFLATE COMPRESSION
 
+
 # BEGIN GZIP COMPRESSION
 <IfModule mod_gzip.c>
-mod_gzip_on Yes
-mod_gzip_dechunk Yes
-mod_gzip_item_include file \.(html?|txt|css|js|php|pl)$
-mod_gzip_item_include handler ^cgi-script$
-mod_gzip_item_include mime ^text/.*
-mod_gzip_item_include mime ^application/x-javascript.*
-mod_gzip_item_exclude mime ^image/.*
-mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+    mod_gzip_on Yes
+    mod_gzip_dechunk Yes
+    mod_gzip_item_include file \.(html?|txt|css|js|php|pl)$
+    mod_gzip_item_include handler ^cgi-script$
+    mod_gzip_item_include mime ^text/.*
+    mod_gzip_item_include mime ^application/x-javascript.*
+    mod_gzip_item_exclude mime ^image/.*
+    mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 </IfModule>
 # END GZIP COMPRESSION
 
 
 #BEGIN EXPIRES HEADERS
 <IfModule mod_expires.c>
-# Enable expirations
-ExpiresActive On
-# Default expiration: 1 hour after request
-ExpiresDefault "now plus 1 hour"
-# CSS and JS expiration: 1 week after request
-ExpiresByType text/css "now plus 1 week"
-ExpiresByType application/javascript "now plus 1 week"
-ExpiresByType application/x-javascript "now plus 1 week"
-# Image files expiration: 1 month after request
-ExpiresByType image/bmp "now plus 1 month"
-ExpiresByType image/gif "now plus 1 month"
-ExpiresByType image/jpeg "now plus 1 month"
-ExpiresByType image/jp2 "now plus 1 month"
-ExpiresByType image/pipeg "now plus 1 month"
-ExpiresByType image/png "now plus 1 month"
-ExpiresByType image/svg+xml "now plus 1 month"
-ExpiresByType image/tiff "now plus 1 month"
-ExpiresByType image/vnd.microsoft.icon "now plus 1 month"
-ExpiresByType image/x-icon "now plus 1 month"
-ExpiresByType image/ico "now plus 1 month"
-ExpiresByType image/icon "now plus 1 month"
-ExpiresByType text/ico "now plus 1 month"
-ExpiresByType application/ico "now plus 1 month"
-# Webfonts
-ExpiresByType font/truetype "access plus 1 month"
-ExpiresByType font/opentype "access plus 1 month"
-ExpiresByType application/x-font-woff "access plus 1 month"
-ExpiresByType image/svg+xml "access plus 1 month"
-ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
+    ExpiresActive on
+    ExpiresDefault                                      "access plus 1 month"
+
+  # CSS
+    ExpiresByType text/css                              "access plus 1 year"
+
+  # Archivos relacionados con AJAX y Web Sockets
+    ExpiresByType application/json                      "access plus 0 seconds"
+    ExpiresByType application/xml                       "access plus 0 seconds"
+    ExpiresByType text/xml                              "access plus 0 seconds"
+
+  # Favicon
+    ExpiresByType image/x-icon                          "access plus 1 week"
+
+  # Componentes HTML (HTCs)
+    ExpiresByType text/x-component                      "access plus 1 month"
+
+  # HTML
+    ExpiresByType text/html                             "access plus 0 seconds"
+
+  # JavaScript
+    ExpiresByType application/javascript                "access plus 1 week"
+    ExpiresByType application/x-javascript              "access plus 1 week" 
+
+  # Manifest
+    ExpiresByType application/x-web-app-manifest+json   "access plus 0 seconds"
+    ExpiresByType text/cache-manifest                   "access plus 0 seconds"
+
+  # Fotos, vídeos y audio
+    ExpiresByType audio/ogg                             "access plus 1 week"
+    ExpiresByType image/gif                             "access plus 1 week"
+    ExpiresByType image/jpeg                            "access plus 1 week"
+    ExpiresByType image/png                             "access plus 1 week"
+    ExpiresByType image/svg+xml                         "access plus 1 week"
+    ExpiresByType image/jpeg                            "access plus 1 week" 
+    ExpiresByType video/mp4                             "access plus 1 week"
+    ExpiresByType video/ogg                             "access plus 1 week"
+    ExpiresByType video/webm                            "access plus 1 week"
+    ExpiresByType application/x-shockwave-flash         "access plus 1 week" 
+
+  # Canales RSS y Atom
+    ExpiresByType application/atom+xml                  "access plus 1 hour"
+    ExpiresByType application/rss+xml                   "access plus 1 hour"
+
+  # Fuentes web
+    ExpiresByType application/x-font-truetype           "access plus 1 month"
+    ExpiresByType application/x-font-opentype           "access plus 1 month"
+    ExpiresByType application/x-font-woff               "access plus 1 month"
+    ExpiresByType application/font-woff                 "access plus 1 month"
+    ExpiresByType application/font-woff2                "access plus 1 month"
+    ExpiresByType application/vnd.ms-fontobject         "access plus 1 month"
+    ExpiresByType application/x-font-ttf                "access plus 1 month"
+    ExpiresByType application/font-sfnt                 "access plus 1 month"
+    ExpiresByType font/opentype                         "access plus 1 month"
+    ExpiresByType font/woff2                            "access plus 1 month"
 </IfModule>
 #END EXPIRES HEADERS
 
 
 # BEGIN Cache-Control Headers
 <ifModule mod_headers.c>
- <filesMatch "\.(ico|jpe?g|png|gif|swf)$">
- Header set Cache-Control "public"
- </filesMatch>
- <filesMatch "\.(css)$">
- Header set Cache-Control "public"
- </filesMatch>
- <filesMatch "\.(js)$">
- Header set Cache-Control "private"
- </filesMatch>
- <filesMatch "\.(x?html?|php)$">
- Header set Cache-Control "private, must-revalidate"
- </filesMatch>
+    Header set Connection keep-alive
+    <filesMatch "\.(ico|jpe?g|png|gif|swf)$">
+        Header set Cache-Control "public"
+    </filesMatch>
+    <filesMatch "\.(css)$">
+        Header set Cache-Control "public"
+    </filesMatch>
+    <filesMatch "\.(js)$">
+        Header set Cache-Control "private"
+    </filesMatch>
+    <filesMatch "\.(x?html?|php)$">
+        Header set Cache-Control "private, must-revalidate"
+    </filesMatch>
 </ifModule>
 # END Cache-Control Headers
+
+
+# TN – ENABLE MOD PAGESPEED START
+# COMBINE CSS, COMPRESS IMAGES, REMOVE HTML WHITE SPACE AND COMMENTS
+<IfModule pagespeed_module>
+    ModPagespeed on
+    ModPagespeedEnableFilters rewrite_css,combine_css
+    ModPagespeedEnableFilters recompress_images
+    ModPagespeedEnableFilters convert_png_to_jpeg,convert_jpeg_to_webp
+    ModPagespeedEnableFilters collapse_whitespace,remove_comments
+</IfModule>
+# TN – ENABLE MOD PAGESPEED END
+
+
+# TN – ENABLE LITESPEED CACHE START
+<IfModule LiteSpeed>
+    CacheEnable public
+    RewriteEngine On
+    RewriteCond %{REQUEST_METHOD} ^GET|HEAD$
+    RewriteCond %{HTTP_HOST} ^sample.com|sample.net|sample.org [NC]
+    RewriteCond %{REQUEST_URI} !login|admin|register|post|cron
+    RewriteCond %{QUERY_STRING} !nocache
+    RewriteRule .* - [E=Cache-Control:max-age=300]
+</IfModule>
+# TN – ENABLE LITESPEED CACHE END
